# AnyBunker

./: .env.example  .gitignore  Cargo.toml  README.md  gen-rust-rpc.ps1  gen-rust-rpc.sh  gen_entity.ps1  gen_entity.sh  test_migrations.sh  theme-dark.css  theme-light.css  watch.sh
bindings/: LogResponse.ts  NamedRequest.ts  SearchQuery.ts  Success.ts
frontend/: .env.example  package-lock.json  package.json  vite.config.js
frontend/src/lib/trpc/: transport.js
frontend/src/lib/trpc/proto/: admin.client.ts
frontend/src/lib/trpc/proto/proto/: admin.ts  index.ts
frontend/src/views/: HomeView.vue
migrations/: 20220602_init.sql  20220608_fix.sql  20220609_timestamp.sql  20220610_admin.sql  20220611_fix_interval.sql  20220612_add_ticker.sql  20220613_autocomplete.sql  20220615_path.sql  20220616_def_admin.sql  20220617_fix_struct.sql  20220618_fix_log.sql  20220619_alter_log.sql  20220620_fix_structs.sql  20220621_fix_notnull_structs.sql  20220901_schemas.sql  20220902_drop_index_name.sql  20220903_add_report_entity.sql  20220904_add_report_send.sql  20220905_add_report_columns.sql  20220906_fix_report_columns.sql  20221128_fix_access_token.sql  20230225_add_citus.sql
proto/: admin.proto  index.proto  log.proto  message.proto
src/: credentials.rs  event.rs  init.rs  main.rs  schemes.rs  utils.rs
src/core/: error.rs  mod.rs
src/handlers/: mod.rs  procedure.ipynb  reports.rs  systems.rs
src/model/: log_accesses.rs  log_admin_ticks.rs  log_admin_user.rs  log_index.rs  log_log.rs  log_report.rs  log_structs.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs
src/rest/: auth.rs  mod.rs
src/rest/admin/: mod.rs  reports.rs
src/rest/schemes/: log_response.rs  mod.rs  report.rs  response.rs  rvec.rs
src/rpc/: mod.rs  rpc.rs  rpc.serde.rs  rpc.tonic.rs
src/rpc/admin/: admin.rs  admin.serde.rs  admin.tonic.rs  index.rs  index.serde.rs  mod.rs
