[package]
name = "AnyBunker"
version = "0.1.0"
edition = "2021"

exclude = ["./migrations", "./frontend", "./bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3"
chrono = "0.4"
sqlx = {version="0.6", features=["runtime-tokio-native-tls", "postgres", "migrate", "uuid", "chrono", "json"]}
log = "0.4"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
simple_logger = { version = "4.0", features = ["colors"] }
tokio = { version = "1.25", features = ["rt", "time", "sync", "signal"] }
futures = "0.3"
dptree = "0.3"
mime = "0.3"
uuid = { version = "1.3", features = ["serde", "v4"] }
sea-orm = {git="https://github.com/SeaQL/sea-orm",  features = ["sqlx-postgres", "runtime-tokio-native-tls", "sqlx-dep"] } # version = "0.11",
sea-query = {version="0.29.0-rc.1", features=["derive", "thread-safe", "backend-postgres", "with-chrono", "with-json", "with-uuid"]} #"postgres-array"
ts-rs = {version = "6.2", features=["uuid", "uuid-impl", "format", "chrono", "chrono-impl", "bytes"]}
utoipa = { version="3.0", features = ["actix_extras"] }
utoipa-swagger-ui = {version="3.0", features = ["actix-web"] }
actix-cors = "0.6"
syntect="5.0"
cached="0.42"
dotenv = "0.15"
cron="0.12"
tonic = "0.9"
prost = "0.11"
prost-types = "0.11"
tracing = { version = "0.1.37", features = ["log"] }
pbjson = "0.5.1"
tonic-web = "0.9"


[build-dependencies]
tonic-build = { version="0.9", features = ["prost"] }
